fixed nav and body overlap on mobile, added css styling for mobile

--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body {
     margin: 0px;
-    padding-top: 63px;
+    padding: 0;
+    padding-top: calc(100vh - 92vh); /* Adjust the height of the navigation bar */
+  box-sizing: border-box;
 }
 
-nav {   
+nav {
     background-color: #bbbcca;
     width: 100%;
     display: flex;
@@ -12,6 +14,7 @@ nav {
     top: 0;
     left: 0;
     margin: 0;
+    height: 8%;
 }
 
 ul {
@@ -21,13 +24,13 @@ ul {
 .nav-bar-right {
     font-family: 'Courier New', Courier, monospace;
     text-align: right;
-    padding-right: 10%;
+    padding-right: 8%;
     font-size: 20px;
 }
 
 .nav-bar-left {
     text-align: left;
-    padding-left: 10%;
+    padding-left: 8%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -59,14 +62,6 @@ ul {
     padding-right: 10px;
 }
 
-.construction-message {
-    font-family: 'Courier New', Courier, monospace;
-    padding: 20px;
-    text-align: center;
-    font-size: 30px;
-}
-
-
 @keyframes typing {
     from {
       width: 0;
@@ -94,16 +89,24 @@ ul {
 
 #name {
     font-family:'Courier New', Courier, monospace;
-    font-size: 50px;
+    font-size: 250%;
     text-align: center;
     margin-bottom: 0px;
+    margin-top: 2%;
+}
+
+.construction-message {
+    font-family: 'Courier New', Courier, monospace;
+    padding: 20px;
+    text-align: center;
+    font-size: 30px;
 }
 
 .contact-icons {
     width: 25px;
     height: 25px;
     margin-right: 15px;
-    margin-left: 15px
+    margin-left: 15px;
 }
 
 footer {
@@ -111,4 +114,26 @@ footer {
     font-size: 12px;
     justify-content: center;
     text-align: center;
+}
+
+
+@media (max-width: 768px) {
+    body{
+        font-size: 14px;
+    }
+    
+    .contact-icons {
+        width: 20px;
+        height: 20px;
+        margin-right: 8px;
+        margin-left: 8px;
+    }
+
+    .construction-message{
+        font-size: 20px;
+    }
+    
+    footer{
+        font-size: 9px;
+    }
 }
